--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
   "author": "Esquel",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.0",
     "angular": "^1.5.11",
-    "babel": "^6.23.0",
-    "babel-core": "^5.8.25",
-    "babel-loader": "^5.3.2",
+    "axios": "^0.18.0",
+    "babel-loader": "^8.0.4",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.28.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^4.1.3"
+  }
 }
