--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.0",
     "angular": "^1.5.11",
+    "angularjs-datepicker": "^2.1.23",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
     "html-loader": "^0.5.5",
